--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -52,3 +52,32 @@ form:invalid button[type="submit"] {
 .my-grey{
   background-color: rgb(54, 52, 52);
 }
+
+@keyframes rainbow{
+  0% {color: red}
+  15% {color: orange;}
+  30% {color: yellow;}
+  38% {color: rgb(187, 255, 0);}
+  45% {color: lime}
+  60% {color: blue}
+  75% {color: darkviolet}
+  90% {color: deeppink;}
+  100% {color: red;}
+}
+
+.like{
+  transition: 0.5s;
+  cursor: pointer;
+}
+
+.like:hover{
+  animation-name: rainbow;
+  animation-iteration-count: infinite;
+  animation-duration: 5s;
+  transform: scale(1.1);
+}
+
+.bodyImg{
+  width: 70%;
+  height: 500px;
+}
