--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -8,7 +8,7 @@ $themes: (
     "warning": #fbcf33,
     "danger": #ea0606,
     "light": #e9ecef,
-    "dark": #111927,
+    "dark": #0d0414,
     "grey": #cbcbcb,
   ),
   dark: (
@@ -20,7 +20,7 @@ $themes: (
     "warning": #fbcf33,
     "danger": #eb5757,
     "light": #ebeef1,
-    "dark": #090f18,
+    "dark": #3161aa,
     "grey": #cbcbcb,
   ),
 );
