Put way too much styling time into the post button lol

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -37,7 +37,9 @@ select {
 }
 
 form:invalid button[type="submit"] {
-  filter: grayscale(1);
+  border: none;
+  color: rgba(255, 255, 255, 0.233);
+  box-shadow: none;
   pointer-events: none;
 }
 
